# embedded_cpp

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  README.md  TODO.md  ci_cd_manual.sh  requirements.txt  setup.sh
application/00_application_template/: CMakePresets.json  CMakelists.txt  README.md
application/00_application_template/source/: CMakeLists.txt  main.cpp
application/00_application_template/source/application/: main.cpp
application/00_application_template/source/component_c/include/: component_c.h
application/00_application_template/source/system/: CMakeLists.txt
application/00_application_template/source/system/source/: system_stub.c
application/template/app_cmake/: CMakePresets.json  CMakelists.txt  README.md  cppcheck_suppress.txt
application/template/app_cmake/source/application/: main.cpp
application/template/app_cmake/source/component_c/: CMakeLists.txt
application/template/app_cmake/source/component_c/include/: component_c.h
application/template/app_cmake/source/component_c/source/: component_c.c
application/template/app_cmake/source/system/source/: startup_stm32f411xe.S  syscalls.c
application/template/app_conan_cmake/: .clang-tidy  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
application/template/app_conan_cmake/source/: CMakeLists.txt
application/template/app_conan_cmake/source/application/: main.cpp
application/template/app_conan_cmake/source/component_c/include/: component_c.h
application/template/app_conan_cmake/source/component_c/source/: component_c.c
application/template/app_conan_cmake/source/system/source/: startup_stm32f411xe.S  syscalls.c
doc/: artifactory.md  clang_tidy.md  include_what_you_use.md  llvm.md  pre_commit.md
sandbox/cmake_compiler_options/: CMakeLists.txt  CMakePresets.json
sandbox/cmake_compiler_options/source/: main.cpp
sandbox/iwyu/: CMakeLists.txt  CMakePresets.json
tool/: README_tool.md
tool/cmake/: clang_tidy.cmake  cppcheck.cmake  format.cmake  in_source_build_guard.cmake  iwyu.cmake
tool/cmake/code_linter/: clang_tidy.cmake  cppcheck.cmake
tool/cmake/compiler/: binary_size.cmake  compiler_options.cmake  map_file.cmake
tool/cmake/compiler/compiler_options/: compiler_options_private.cmake
tool/cmake/toolchain/: arm_gcc_toolchain.cmake  conan_cross_compilation.cmake  stm32f4.cmake
tool/conan/: README.md  conan_config_install.sh  settings_user.yml
tool/conan/profiles/: clang  default  gcc  stm32f  stm32f_b  stm32f_c
tool/conan/profiles_bk/: stm32f
tool/git/: .bashrc  .gitconfig  deploy.sh
tool/llvm/: README.md
tool/script/: cmake_build.sh  conan_usecases.sh  template.sh
tool/script/_archives/: cmake_build.sh
tool/script/helper/: conan_create_template_library.sh  pretty_printer.sh
